--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 html {
   font-size: 12px;  
 }
+
+input[type=text],
+input[type=time]{
+  border: 1px solid silver;
+  padding: 5px;
+  min-width: 15em;
+  font-size: 1.2em;
+}
