--- a/src/Calendar.css
+++ b/src/Calendar.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid black;
   min-width: 76.8em;
   width: 100%;
   position: relative;
@@ -53,7 +52,7 @@
 
 .calendar-day {
   border: 1px solid black;
-  height: 150px;
+  height: 115px;
   width: 13%;
   position: relative;
   padding-top: 15px;
@@ -76,11 +75,11 @@
 
 .calendar-week-day {
   width: 13%;
-  border: 1px solid black;
   background-color: #2f74b5;
   color: #fff;
   font-weight: bold;
   font-size: 1.2em;
+  padding: 5px;
 }
 
 .calendar-day:hover .calendar-day__button {
@@ -104,7 +103,7 @@
   left: 50%;
   transform: translate(-50%, -50%) !important;
   width: 400px;
-  height: 200px;
+  height: 300px;
   background-color: white;
   text-align: center;
   border: 2px solid black;
@@ -136,4 +135,17 @@ button {
 
 button:hover {
   cursor: pointer;
+}
+
+.calendar-modal-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.calendar-modal-group label {
+
+}
+.calendar-modal-group input {
+  /* display: block; */
 }
